2002-03-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* generic/tclCompile.c (TclCompileTokens): Modified imported bugfix
	  to use a heap variable for the message buffer instead of placing
	  it on the stack.

	* Updated "mod-8-3-1-branch" to head of "core-8-3-1-branch" to get
	  the newest fixes for tcl 8.3.4 into this branch.

2002-03-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclScan.c (Tcl_ScanObjCmd): prevented ckfree being
	called on a pointer to NULL.

2002-03-15  Miguel Sofer  <msofer@users.sourceforge.net>

	Backport of Donal Fellows patch:
	* tests/compile.test (compile-12.3): Test to detect bug 530320.
	* generic/tclCompile.c (TclCompileTokens): Fixed buffer overrun
	reported in bug 530320.

2002-03-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/io.test:
	* tests/encoding.test: updated to reflect iso2022 escape change
	* library/encoding/iso2022-jp.enc: 
	* library/encoding/iso2022.enc: 
	* tools/encoding/iso2022-jp.esc:
	* tools/encoding/iso2022.esc: gave <ESC>$B precedence over <ESC>$@,
	based on comments (point 1) in [Bug #219283] (rfc 1468)

	* tests/encoding.test: added encoding-23.* tests
	* generic/tclIO.c (FilterInputBytes): reset the TCL_ENCODING_START
	flags in the ChannelState when using 'gets'. [Bug #523988]
	Also reduced the value of ENCODING_LINESIZE from 30 to 20 as this
	seems to improve the performance of 'gets' according to tclbench.

2002-02-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* unix/tclUnixChan.c (TclpOpenFileChannel): Added code to regonize
	  "/dev/tty" (by name) and to not handle it as tty / serial
	  line. This is the controlling terminal and is special. Setting
	  it into raw mode as is done for other tty's is a bad idea. This
	  is a hackish fix for expect SGF Bug #520624.

2002-02-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* mac/tclMacSock.c (TcpGetOptionProc): Changed to recognize the
	  option "-error". Essentially ignores the option, always